<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.Toolbar
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|enterAlways">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/tabMonday"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/monday" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabTuesday"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/tuesday" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabWednesday"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/wednesday" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabThursday"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/thursday" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/friday" />
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.assist.tutorial.damian.studentorganizer.Fragments.WeekSchedule">


                <android.support.v7.widget.RecyclerView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/recycleView">

                </android.support.v7.widget.RecyclerView>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_info"
        android:onClick="addLessons"/>
</android.support.design.widget.CoordinatorLayout>
